--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,74 @@
   margin: 0;
   padding: 0;
 }
+html {
+  font-family: arial;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  align-content: center;
+}
+.app {
+  position: relative;
+  margin: auto;
+  max-width: 720px;
+  aspect-ratio: 1.2/1;
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.app::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: black;
+  top: 50%;
+  translate: 0 -50%;
+}
+.app > * {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cards-container {
+  list-style: none;
+  display: flex;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid #e5e5e5;
+}
+.opponent .cards-container {
+  width: 40%;
+  height: 38%;
+  background: #2e2e2e;
+  gap: 1.25em;
+}
+.player .cards-container {
+  width: 74%;
+  height: 74%;
+  padding: 1em;
+  gap: 3em;
+  background: #454545;
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
+}
+.card {
+  width: 100%;
+  height: 100%;
+  background: url("https://i.pinimg.com/564x/0a/1b/d7/0a1bd73647a6f86619c9e47fb69b86c8.jpg")
+    100%/100% no-repeat;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.card img {
+  object-fit: cover;
+  width: 100%;
+}
