--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+:root {
+  --font-size-smaller: clamp(0.6rem, 0.75vw, 0.8rem);
+  --font-size-small: clamp(0.75rem, 1vw, 1rem);
+  --font-size-medium: clamp(1rem, 2vw, 1.5rem);
+  --font-size-large: clamp(1.5rem, 3vw, 2rem);
+  --font-size-larger: clamp(2rem, 4vw, 3rem);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 html {
-  font-family: arial;
+  font-family: "Century Gothic";
+  font-weight: 600;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -14,17 +23,31 @@ body,
   width: 100%;
   height: 100%;
   align-content: center;
+  background: rgb(32, 32, 32);
+  padding: 0.5rem;
+}
+button {
+  all: unset;
+  cursor: pointer;
+  transition: translate 0.1s linear, scale 0.1s linear;
+}
+button:hover {
+  translate: 0 -4%;
+}
+button:active {
+  scale: 0.95;
 }
 .app {
   position: relative;
   margin: auto;
-  max-width: 720px;
+  max-width: 840px;
   aspect-ratio: 1.2/1;
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 1em 0;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  background: #e5e5e5;
+  box-shadow: 8px 8px 8px rgba(0, 0, 0);
 }
 .app::before {
   content: "";
@@ -41,36 +64,67 @@ body,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2em;
+  position: relative;
 }
 .cards-container {
   list-style: none;
   display: flex;
   border-radius: 10px;
-  overflow: hidden;
   border: 1px solid #e5e5e5;
+  overflow: hidden;
 }
 .opponent .cards-container {
-  width: 40%;
+  width: 38%;
   height: 38%;
   background: #2e2e2e;
   gap: 1.25em;
 }
 .player .cards-container {
-  width: 74%;
+  width: 70%;
   height: 74%;
-  padding: 1em;
-  gap: 3em;
+  padding: 1em 2em;
+  gap: 2em;
   background: #454545;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .card {
   width: 100%;
   height: 100%;
-  background: url("https://i.pinimg.com/564x/0a/1b/d7/0a1bd73647a6f86619c9e47fb69b86c8.jpg")
-    100%/100% no-repeat;
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  background: url("../back.png") white 100%/100% no-repeat;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .card img {
   object-fit: cover;
   width: 100%;
+}
+.player-menu {
+  width: 70%;
+  margin-block: 0.25em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.value {
+  position: absolute;
+  left: 50%;
+  translate: -50%;
+  font-size: var(--font-size-larger);
+  font-weight: 600;
+}
+.oppValue {
+  bottom: 2%;
+}
+.menu-button {
+  font-size: var(--font-size-smaller);
+  padding: 0.75em 1em;
+  border-radius: 0.75em;
+}
+.menu-button-draw {
+  border: 1px solid black;
+  background: white;
+}
+.menu-button-challenge {
+  background: black;
+  color: white;
 }
