--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,14 @@ button:active {
     transform: scaleX(1);
   }
 }
-
+.start-game-button {
+  margin: auto;
+  padding: 0.25em 0.75em;
+  font-size: var(--font-size-small);
+  border-radius: 0.5em;
+  background: black;
+  color: white;
+}
 .player-menu {
   width: 70%;
   margin-block: 0.25em;
