--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ button:active {
   margin: auto;
   max-width: 840px;
   aspect-ratio: 1.2/1;
-  padding: 1em 0;
+  padding: 0.5em 0;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -59,6 +59,7 @@ button:active {
   translate: 0 -50%;
 }
 .app > * {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -71,8 +72,8 @@ button:active {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  align-items: center;
   border-radius: 10px;
-  border: 1px solid #e5e5e5;
   overflow: hidden;
 }
 .opponent .cards-container {
@@ -83,15 +84,16 @@ button:active {
 }
 .player .cards-container {
   width: 70%;
-  height: 74%;
+  height: 70%;
   padding: 1em 2em;
   gap: 2em;
   background: #454545;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .card {
-  width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
   background: url("../back.png") white 100%/100% no-repeat;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -99,6 +101,7 @@ button:active {
   object-fit: cover;
   object-position: center;
   width: 100%;
+  height: 100%;
 }
 .card-animation {
   animation: flip 0.2s linear forwards 1.5s;
@@ -121,7 +124,7 @@ button:active {
 }
 .player-menu {
   width: 70%;
-  margin-block: 0.25em;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -148,4 +151,24 @@ button:active {
 .menu-button-challenge {
   background: black;
   color: white;
+}
+
+@media screen and (max-width: 540px) {
+  .app {
+    width: 100%;
+    height: 100%;
+  }
+  .opponent .cards-container {
+    width: 50vw;
+    height: 20%;
+  }
+  .player .cards-container {
+    width: 90%;
+    height: 40%;
+    gap: 1em;
+  }
+  .player-menu {
+    position: absolute;
+    top: 2%;
+  }
 }
