--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ button:active {
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .card {
+  font-size: 0;
   height: 100%;
   display: flex;
   align-items: center;
