--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,41 @@ button:active {
   right: 0.25em;
   font-size: var(--font-size-larger);
 }
+.face-card-button {
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  margin: 0.5em;
+  padding: 1em 2em;
+  border-radius: 0.75em;
+  box-shadow: inset 0 0 10px black;
+  border: 2px solid black;
+}
+.face-card-button::before {
+  content: "Face Cards";
+  position: absolute;
+  left: 50%;
+  bottom: -2em;
+  translate: -50%;
+  font-size: var(--font-size-smaller);
+  width: max-content;
+}
+.toggle-element {
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  border-radius: 0.7em;
+  background: #454545;
+  box-shadow: inset 2px 2px 2px white, inset -2px -2px 2px black;
+  transition: all 0.2s ease;
+}
+
+.toggled-off {
+  left: 50%;
+}
 
 @media screen and (max-width: 540px) {
   .app {
