--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,7 @@ button:active {
   border-radius: 0.75em;
   box-shadow: inset 0 0 10px black;
   border: 2px solid black;
+  transition: all 0.2s ease;
 }
 .face-card-button::before {
   content: "Face Cards";
@@ -196,6 +197,15 @@ button:active {
 
 .toggled-off {
   left: 50%;
+}
+
+.face-card-button:has(.toggled-on) {
+  background: #0e4322;
+  box-shadow: inset 0 0 10px black;
+}
+.face-card-button:has(.toggled-off) {
+  background: #360808;
+  box-shadow: inset 0 0 10px black;
 }
 
 @media screen and (max-width: 540px) {
