--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ button:active {
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .card img {
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   width: 100%;
   height: 100%;
